# HCMAI-BACKUP

./: .env.remote.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/adr/: ADR-0001-floor-edge-moat-strategy.md  ADR-0002-vietnamese-capable-not-native.md  ADR-0003-rtx5070-finals-gh200-offline.md  ADR-0004-no-streamlit-react-websocket-ui.md  ADR-0005-llm-path-bakeoff-gates-planner.md  ADR-0006-int4-quantization-hot-path.md  ADR-0007-original-contributions-c1-c2-c4.md  ADR-0008-rrf-as-runtime-fallback.md  ADR-0009-sdd-workflow.md  ADR-0010-borrow-from-2025-baseline.md  ADR-0011-r2-artifact-store-and-lease-rollover.md  ADR-0012-qwen-offline-visual-document-lane.md  ADR-0013-mvp-single-shared-server-from-r2.md  ADR-0014-mvp-reuse-milvus-backend-standalone.md  ADR-0015-keyframe-image-hosting-thumbnails.md  ADR-0016-data-durability-three-tier-banking.md  INDEX.md  template.md
docs/illustrations/: README.md
docs/papers/: download-papers.ps1
docs/permissions/: 2025-baseline-reuse.md
docs/proposals/: 01-interactive-system-architecture.md  02-automatic-track-agent.md  03-data-pipeline.md  04-fine-tuning-plan.md  05-evaluation-harness.md  06-ui-ux-design.md  07-approaches-catalog.md  08-original-contributions.md  09-llm-path-bakeoff.md
docs/research-notes/: 01-aic-hcmc-prior-editions.md  02-lsc-vbs-systems-deep-dive.md  03-foundation-models-2026.md  04-vietnamese-stack-and-agents.md  05-baseline-2025-analysis.md  06-aic2026-dataset-shape.md  07-aic2025-proxy-corpus.md
docs/specs/: INDEX.md  SPEC-0001-evaluation-harness.md  SPEC-0002-llm-path-bakeoff-runner.md  SPEC-0004-image-embedding-service.md  SPEC-0006-milvus-schema-and-queries.md  SPEC-0014-diacritic-bert.md  SPEC-0018-dres-integration.md  SPEC-0020-ndcg-at-10-metric.md  SPEC-0021-ci-pipeline.md  SPEC-0022-remote-gpu-runner.md  SPEC-0024-provision-packaging.md  SPEC-0025-encoder-bench.md  SPEC-0026-mvp-serving-api.md  SPEC-0027-mvp-operator-ui.md  SPEC-0028-r2-preflight-check.md  template.md
docs/strategy/: 00-master-strategy.md  01-feasibility-audit-2026-06-24.md
eval-results/: .gitkeep
experiments/: README.md
infra/remote/: README.md  bootstrap.sh  c1_bank.sh  c1_calibrate.py  c1_calibrate_retrain.sh  c1_demo.sh  c1_eval.sh  c1_smoke.sh  encoder_bench.sh  index_bank_watcher.sh  index_extract.sh  index_qwen8b_after.sh  milvus_eval.py  milvus_prep_index.py  milvus_probe.py  ocr_sample.py  profile_aic2025.py  profile_aic2025.sh  qwen_offline_extract.sh  slurm.sbatch.tpl
src/aic2026/: __init__.py
src/aic2026/cli/: __init__.py  embed.py  eval.py  index.py  remote.py  remote_job_exec.py  serve.py  train.py
src/aic2026/embedding/: __init__.py  base.py  dummy.py  extract.py  metaclip2.py  provided_clip.py  qwen3vl_embed.py  siglip2.py
src/aic2026/eval/: __init__.py  demo.py  diacritic_robustness.py  encoder_bench.py  retrievers.py
src/aic2026/harness/: __init__.py  aggregator.py  backend.py  runner.py  scoring.py
src/aic2026/index/: __init__.py  milvus_schema.py  milvus_store.py  models.py
src/aic2026/models/: __init__.py  metrics.py  submission.py  task.py
src/aic2026/remote/: __init__.py  context.py  launchers.py  manifest.py  preflight.py  r2.py  registry.py  ssh.py
src/aic2026/remote/jobs/: __init__.py  cache_env.py  cache_weights.py  eval_c1.py  extract_siglip.py  train_c1.py
src/aic2026/reporting/: __init__.py  html.py  json_writer.py  provenance.py
src/aic2026/reporting/templates/: report.html.j2
src/aic2026/serving/: __init__.py  app.py  config.py  fusion.py  issues.py  models.py  service.py
src/aic2026/train/: __init__.py  calibrate.py  diacritic_bert.py  diacritic_corpus.py  diacritic_noise.py
tests/integration/: test_eval_smoke_AC1.py  test_serving_ws_AC8.py
tests/mock_tasks/: README.md  _generate_smoke.py  smoke_20.jsonl
tests/unit/: _milvus_reload_helper.py  conftest.py  test_calibrate_AC1.py  test_compare_c1_AC8.py  test_diacritic_bert_AC3.py  test_diacritic_corpus_AC2.py  test_diacritic_noise_AC1.py  test_diacritic_robustness_AC4.py  test_embed_cli_qwen_offline_AC6.py  test_embedding_dummy_AC1.py  test_embedding_dummy_AC2.py  test_embedding_extract_AC3.py  test_embedding_siglip2_AC4.py  test_encoder_bench_AC3.py  test_encoder_bench_AC4.py  test_encoders_AC1.py  test_eval_demo_AC1.py  test_metrics_schema_AC4.py  test_milvus_backend.py  test_milvus_cosine_AC7.py  test_milvus_docs_AC8.py  test_milvus_filter_AC4.py  test_milvus_ingest_AC2.py  test_milvus_ingest_AC6.py  test_milvus_multivector_reload_AC9.py  test_milvus_schema_AC1.py  test_milvus_search_AC3.py  test_milvus_submission_adapter_AC5.py  test_ndcg_metrics_AC2.py  test_provided_clip_AC2.py  test_remote_cache_env_AC2.py  test_remote_cache_weights_AC8.py  test_remote_cli_dry_run_AC6.py  test_remote_context_AC1.py  test_remote_eval_c1_AC9.py  test_remote_job_exec_runid_AC3.py  test_remote_manifest_AC2.py  test_remote_preflight_AC1.py  test_remote_preflight_AC2.py  test_remote_preflight_AC3.py  (+21 more)
web/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  services.tsx  store.ts  vite-env.d.ts
web/src/api/: client.ts  types.ts  ws.ts
web/src/components/: FrameDetailModal.tsx  FrameDetailPanel.tsx  HistoryList.tsx  IssueButton.tsx  IssueDialog.tsx  LaneSelector.tsx  QueryBox.tsx  ReadinessIndicator.tsx  ResultGrid.tsx  StatusBar.tsx  TopBar.tsx  TopKControl.tsx
web/src/hooks/: useIssueCapture.ts  useReadiness.ts  useSearch.ts
web/src/test/: setup.ts  utils.tsx
web/tests/: empty_query.test.tsx  frame_detail.test.tsx  grid_virtualisation.test.tsx  issue_capture.test.tsx  lane_select.test.tsx  query_flow.test.tsx  ws_fallback.test.tsx
