[project]
name = "aic2026"
version = "0.0.1"
description = "AIC2026 evaluation harness and supporting infrastructure"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AIC2026 team" },
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "jinja2>=3.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "boto3>=1.34",
]

[project.optional-dependencies]
# SPEC-0004: real image-text encoder backbones. Not installed in CI - the
# DummyEmbedder is what unit tests exercise. Install locally via
# `uv sync --extra embedding` to run SigLip2Embedder against real weights.
# transformers + sentencepiece are REQUIRED (not optional): open_clip loads
# SigLIP-2's tokenizer via transformers.AutoTokenizer, which is SentencePiece-
# backed. Discovered on H200 2026-05-30 (spec/0023). huggingface-hub powers
# the cache-weights job (SPEC-0022).
embedding = [
    "torch>=2.4",
    "open-clip-torch>=2.32",
    # transformers floor: Qwen3-VL-Embedding (SPEC-0025) may require a newer
    # release than SigLIP-2 does; if the bench fails to load Qwen on the box,
    # bump this floor per the HF model card (SPEC-0025 SS 9 Q2).
    "transformers>=4.45",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.24",
    "pillow>=10",
    # bitsandbytes: optional INT4 load for the SPEC-0025 deployability footprint
    # (the 5070-fit gate). Only exercised on the GPU box; not installed in CI.
    "bitsandbytes>=0.43",
]
# SPEC-0014: C1 DiacriticBERT training. torch + transformers (frozen BGE-M3),
# datasets (public Vietnamese corpora), pyarrow (the contrastive Parquet). Not
# installed in CI; the noise/corpus/eval logic is CPU-tested via the
# clean_strings override + DummyEmbedder, and training via an injected stub
# backbone (no model download). Install on the GPU box: `uv sync --extra train`.
train = [
    "torch>=2.4",
    "transformers>=4.45",
    "sentencepiece>=0.2",
    "datasets>=2.19",
    "pyarrow>=16",
    "huggingface-hub>=0.24",
]

[project.scripts]
eval = "aic2026.cli.eval:main"
embed = "aic2026.cli.embed:main"
remote = "aic2026.cli.remote:main"
remote-job-exec = "aic2026.cli.remote_job_exec:main"
train = "aic2026.cli.train:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    # `moto[server]` (rather than plain `moto`) brings flask/werkzeug for
    # ThreadedMotoServer, which is how R2 / manifest tests get a real local
    # S3-compatible HTTP endpoint. See `tests/unit/test_remote_r2_AC3.py`.
    "moto[server]>=5",
    # pyarrow: the C1 corpus builder (SPEC-0014) writes the contrastive Parquet;
    # tests exercise it via the clean_strings override (CPU, no network).
    "pyarrow>=16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aic2026"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aic2026",
    "tests",
    "pyproject.toml",
    "README.md",
    "ruff.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "integration: end-to-end tests that may spawn subprocesses or hit local services",
]
